# xacaton_pharm_go

pharm_go_back/: .gitignore  Makefile  mypy.ini  pre-commit.sh  pyproject.toml
pharm_go_back/pharm_go_back/api/: app.py  requirements.txt
pharm_go_back/pharm_go_back/repository/: interface.py  local_repo.py
pharm_go_back/pharm_go_back/scrapper/: Readme.md  items.py  middlewares.py  pipelines.py  run.py  scrapy.cfg  settings.py
pharm_go_back/pharm_go_back/scrapper/spiders/: aversi.py  medscrapper.py  psp.py
pharm_go_back/pharm_go_back/scrapper/spiders/lib/: process_result.py
pharm_go_back/tests/: conftest.py  test_hello.py  test_repository.py
pharm_go_ui/: README.md  package.json
pharm_go_ui/src/: App.vue
pharm_go_ui/src/router/: index.ts
pharm_go_ui/src/views/: FindMedView.vue
