[tool.poetry]
name = "pharm_go_back"
version = "0.1.0"
description = ""
authors = ["Andrey A. Osipov <developer.osipov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^=3.9.2"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
pytest-coverage = "^0.0"
isort = "^5.9.2"
types-requests = "^2.25.0"
flake8-absolute-import = "^1.0"
Faker = "^8.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[flake8]
extend-ignore = 'E203'
max-line-length = 100
count = true
statistics = true